--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,34 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+
+<div id="bgimage">
+  <%= image_tag 'library-bg.jpg' %>
+</div>
+
+
+<nav class="navbar navbar-default">
+
+  <!-- <div class="container"> -->
+
+    <div class="navbar-header" id="logo">
+      <%= link_to "CHAMBERS", root_path, class: "navbar-brand" %>
+    </div>
+
+    <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Chambers', chambers_path %></li>
+        <li><%= link_to 'Books', books_path %></li>
+    </ul>
+
+  <!-- </div> -->
+
+</nav>
+
+
+
 
 <%= yield %>
 
