1. design welcome index with jumbotron 2. add navigation buttons for edit, back, delete on chambers and book show pages 3. include download button in navigatino for book show page 4. clean up CSS for edit and new pages for chambers and books 5. create navigation and functionality in books and chambers controller for delete and edit

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,3 +1,12 @@
-<h1>New Book</h1>
+<div class="container">
+  <nav class="navbar">
+    <div class="navbar-header">
+      <h3>Add an eBook</h3>
+    </div>
+    <ul class="nav nav-pills navbar-right">
+        <li role="presentation"><%= link_to "Back", books_path %></li>
+    </ul>
+  </nav>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
