--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,5 +3,10 @@
   <h2><%= link_to @book.title, @book.book_uri %></h2>
   <h3><%= @book.author %></h3>
   <p><%= @book.description %></p>
-  <p><%= link_to "DOWNLOAD", @book.book_uri %></p>
+  <ul class="nav nav-pills">
+    <li role="presentation"><%= link_to "Back", books_path %></li>
+    <li role="presentation"><%= link_to "Download", @book.book_uri %></li>
+    <li role="presentation"><%= link_to "Edit", edit_book_path %></li>
+    <li role="presentation"><%= link_to "Delete", book_path, method: :delete, data: {confirm: "Are you sure?"} %></li>
+  </ul>
 </div>
