--- a/app/views/chambers/edit.html.erb
+++ b/app/views/chambers/edit.html.erb
@@ -1,3 +1,14 @@
-<h2>Edit Chamber</h2>
 
+<div class="container">
+<nav class="navbar">
+  <div class="navbar-header">
+    <h3>Edit Chamber</h3>
+  </div>
+  <ul class="nav nav-pills navbar-right">
+      <li role="presentation"><%= link_to "Back", chamber_path %></li>
+  </ul>
+
+</nav>
+<br><br>
 <%= render 'form' %>
+</div>
