--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
-  Chambers<br>
-  Find or Build a Chamber of eBooks.<br>
-  <button class="btn">Start Your Search</button>
+<div class="jumbotron">
+  <h1>Welcome to Chambers</h1>
+  <p>Find or Create eBook Libraries</p>
+  <p class="btn  btn-lg">
+    <%= link_to "Start Exploring Chambers", chambers_path %>
+  </p>
+</div>
 </div>
