--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,7 @@
 .container {
   background-color: white;
   margin-top: 20px;
+  padding-bottom: 20px
 }
 
 .container-image {
@@ -37,4 +38,10 @@
 
 .navbar {
   padding-right: 20px;
+}
+
+.jumbotron {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
 }
