--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <nav class="navbar">
     <div class="navbar-header">
-      <h3>Build a New Chamber</h3>
+      <h3>Edit Book</h3>
     </div>
     <ul class="nav nav-pills navbar-right">
-        <li role="presentation"><%= link_to "Back", chambers_path %></li>
+        <li role="presentation"><%= link_to "Back", book_path %></li>
     </ul>
   </nav>
-
+  <br><br>
   <%= render 'form' %>
 </div>
