--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,6 @@
 
 <nav class="navbar navbar-default">
 
-  <!-- <div class="container"> -->
-
     <div class="navbar-header" id="logo">
       <%= link_to "CHAMBERS", root_path, class: "navbar-brand" %>
     </div>
@@ -27,10 +25,10 @@
         <li><%= link_to 'Books', books_path %></li>
     </ul>
 
-  <!-- </div> -->
-
 </nav>
 
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 
 
