1. add login/logout buttons and logic to navbar. 2. restrict adding of books/chambers to logged in users. 3. add user_id to Chamber and rake db:migrate

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,9 @@
 
 <div class="container">
 <h1>Books</h1>
+<% if user_signed_in? %>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "Add Book", new_book_path %><br><br>
+<% end %>
   <ul>
     <% @books.each do |book| %>
       <li>
