--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,18 @@
       <%= link_to "CHAMBERS", root_path, class: "navbar-brand" %>
     </div>
 
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav">
         <li><%= link_to 'Chambers', chambers_path %></li>
         <li><%= link_to 'Books', books_path %></li>
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Register', new_user_registration_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Log In', new_user_session_path %></li>
+        <% end %>
     </ul>
 
 </nav>
