add chambers to users and add books to chambers

--- a/app/views/chambers/show.html.erb
+++ b/app/views/chambers/show.html.erb
@@ -6,5 +6,6 @@
     <li role="presentation"><%= link_to "Back", chambers_path %></li>
     <li role="presentation"><%= link_to "Edit", edit_chamber_path %></li>
     <li role="presentation"><%= link_to "Delete", chamber_path, method: :delete, data: {confirm: "Are you sure?"} %></li>
+    <li role="presentation"><%= link_to "Books", chamber_books_path %></li>
   </ul>
 </div>
