--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,15 @@
     </div>
 
     <ul class="nav navbar-nav">
-        <li><%= link_to 'Chambers', chambers_path %></li>
+        <li><%= link_to 'All Chambers', chambers_path %></li>
         <li><%= link_to 'Books', books_path %></li>
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <!-- <li> add My Chambers link </li> -->
+        <!-- <li> add My Chambers link </li> -->
+      <% end %>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
