--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 <h1>Books</h1>
-<% if user_signed_in? %>
+<% if current_user %>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "Add Book", new_book_path %><br><br>
 <% end %>
   <ul>
