--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,22 +22,22 @@
 
     <ul class="nav navbar-nav">
         <li><%= link_to 'All Chambers', chambers_path %></li>
-        <li><%= link_to 'Books', books_path %></li>
+        <!-- <li><%= link_to 'Books', books_path %></li> -->
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <% if user_signed_in? %>
+      <% if current_user %>
         <!-- <li> add My Chambers link </li> -->
         <!-- <li> add My Chambers link </li> -->
       <% end %>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Register', new_user_registration_path %></li>
-        <% if user_signed_in? %>
-          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to 'Register', new_user_path %></li>
+        <% if current_user %>
+          <li><%= link_to 'Log Out', session_path('dummy'), method: :delete %></li>
         <% else %>
-          <li><%= link_to 'Log In', new_user_session_path %></li>
+          <li><%= link_to 'Log In', login_path %></li>
         <% end %>
     </ul>
 
