create dropdown for user/account/login/logout/register

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,3 +45,11 @@
   margin-top: auto;
   margin-bottom: auto;
 }
+
+#dropdownMenu1 {
+  font-family: 'Helvetica Neue';
+  margin-top: 15px;
+  color: #333;
+}
+
+
