--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,26 +21,41 @@
     </div>
 
     <ul class="nav navbar-nav">
-        <li><%= link_to 'All Chambers', chambers_path %></li>
-        <!-- <li><%= link_to 'Books', books_path %></li> -->
-    </ul>
-
-    <ul class="nav navbar-nav navbar-right">
+      <li><%= link_to 'All Chambers', chambers_path %></li>
       <% if current_user %>
-        <!-- <li> add My Chambers link </li> -->
-        <!-- <li> add My Chambers link </li> -->
+        <li><%= link_to 'My Chambers', mychambers_path %></li>
       <% end %>
     </ul>
 
-    <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
+    <ul class="nav navbar-nav navbar-nav">
 
-          <li><%= link_to 'Log Out', session_path('dummy'), method: :delete %></li>
-          <li><%= link_to 'Account Settings', edit_user_path(current_user) %></li>
-        <% else %>
-          <li><%= link_to 'Register', new_user_path %></li>
-          <li><%= link_to 'Log In', login_path %></li>
-        <% end %>
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+        <ul id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <% if current_user %>
+            <%= current_user.handle %>
+          <% else %>
+            Register/Login
+          <% end %>
+          <span class="caret"></span>
+        </ul>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+
+          <!--<li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+           <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li> -->
+          <% if current_user %>
+            <li><%= link_to 'Log Out', session_path('dummy'), method: :delete %></li>
+            <li><%= link_to 'Account Settings', edit_user_path(current_user) %></li>
+          <% else %>
+            <li><%= link_to 'Register', new_user_path %></li>
+            <li><%= link_to 'Log In', login_path %></li>
+          <% end %>
+        </ul>
+
     </ul>
 
 </nav>
