add curator options and 'add to reading list' option

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,9 +4,15 @@
   <h3><%= @book.author %></h3>
   <p><%= @book.description %></p>
   <ul class="nav nav-pills">
-    <li role="presentation"><%= link_to "Back", books_path %></li>
     <li role="presentation"><%= link_to "Download", @book.book_uri %></li>
-    <li role="presentation"><%= link_to "Edit", edit_book_path %></li>
-    <li role="presentation"><%= link_to "Delete", book_path, method: :delete, data: {confirm: "Are you sure?"} %></li>
+    <% if current_user %>
+      <li role="presentation"><%= link_to "Add To Reading List", add_to_reading_list_path(@book) %></li>
+    <% end %>
+    <% if current_user.access_types.find_by(chamber_id: @chamber.id) %>
+      <% if current_user.access_types.find_by(chamber_id: @chamber.id).curates  %>
+        <li role="presentation"><%= link_to "Edit", edit_book_path %></li>
+        <li role="presentation"><%= link_to "Delete", book_path, method: :delete, data: {confirm: "Are you sure?"} %></li>
+      <% end %>
+    <% end %>
   </ul>
 </div>
