--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,10 @@
     </div>
 
     <ul class="nav navbar-nav">
-      <li><%= link_to 'All Chambers', chambers_path %></li>
+      <li><%= link_to 'Explore', chambers_path %></li>
       <% if current_user %>
         <li><%= link_to 'My Chambers', mychambers_path %></li>
+        <li><%= link_to 'Reading List', readinglist_path %></li>
       <% end %>
     </ul>
 
