--- a/app/views/users/readinglist.html.erb
+++ b/app/views/users/readinglist.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h3>Reading List</h3>
   <% if current_user %>
-    <ul class="list-group container">
+    <ul class="list-group">
     <% if current_user.books.count > 0 %>
       <% current_user.books.each do |book| %>
        <li class="list-group-item"><%= link_to book.title, book_path(book) %></li>
