--- a/app/views/chambers/show.html.erb
+++ b/app/views/chambers/show.html.erb
@@ -3,13 +3,17 @@
   <h2><%= @chamber.name %></h2>
   <p><%= @chamber.description %></p>
   <ul class="nav nav-pills">
-    <% if current_user.access_types.find_by(chamber_id: @chamber.id) %>
-      <% if current_user.access_types.find_by(chamber_id: @chamber.id).curates  %>
-        <li role="presentation"><%= link_to "Edit", edit_chamber_path %></li>
-        <li role="presentation"><%= link_to "Delete", chamber_path, method: :delete, data: {confirm: "Are you sure?"} %></li>
+    <li role="presentation"><%= link_to "Home", root_path %></li>
+    <% if current_user %>
+      <% if current_user.access_types.find_by(chamber_id: @chamber.id) %>
+        <% if current_user.access_types.find_by(chamber_id: @chamber.id).curates  %>
+          <li role="presentation"><%= link_to "Edit", edit_chamber_path %></li>
+          <li role="presentation"><%= link_to "Delete", chamber_path, method: :delete, data: {confirm: "Are you sure?"} %></li>
+        <% end %>
+      <% else %>
+        <li role="presentation"><%= link_to "Subscribe", subscribe_chamber_path(@chamber) %></li>
       <% end %>
     <% end %>
-    <li role="presentation"><%= link_to "Home", root_path %></li>
     <li role="presentation"><%= link_to "See Bookshelf", chamber_books_path %></li>
   </ul>
 </div>
